--- a/smarter_book_filter.ipynb
+++ b/smarter_book_filter.ipynb
@@ -20,9 +20,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c9d94ce",
+   "id": "1f8ca6b8",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1e06abd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4c9d94ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Library Catalog:\n",
+      "Book: The Hobbit                     Status: Available\n",
+      "Book: Slaughterhouse-Five            Status: Available\n",
+      "Book: Moby Dick                      Status: Available\n",
+      "Book: The Catcher in the Rye         Status: Checked Out\n",
+      "Book: Siddhartha                     Status: Checked Out\n",
+      "Book: Meditations                    Status: Checked Out\n",
+      "Book: Things Fall Apart              Status: Available\n",
+      "Book: To Kill a Mockingbird          Status: Checked Out\n",
+      "Book: Pride and Prejudice            Status: Available\n",
+      "Book: Jane Eyre                      Status: Checked Out\n",
+      "Book: The Great Gatsby               Status: Available\n",
+      "Book: War and Peace                  Status: Checked Out\n",
+      "Book: Crime and Punishment           Status: Available\n",
+      "Book: Brave New World                Status: Available\n",
+      "Book: A Tale of Two Cities           Status: Checked Out\n",
+      "Book: Animal Farm                    Status: Available\n",
+      "Book: Dracula                        Status: Checked Out\n",
+      "Book: Frankenstein                   Status: Available\n",
+      "Book: The Road                       Status: Available\n",
+      "Book: The Alchemist                  Status: Checked Out\n"
+     ]
+    }
+   ],
    "source": [
     "# Define the dictionary with books and their availability\n",
     "library = {\n",
@@ -46,44 +91,12 @@
     "    \"Frankenstein\": \"Available\",\n",
     "    \"The Road\": \"Available\",\n",
     "    \"The Alchemist\": \"Checked Out\"\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "32b33fe9",
-   "metadata": {},
-   "source": [
-    "Seen below is our original filter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "457e82ad",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Books that start with 'T':\n",
-      "The Hobbit\n",
-      "The Catcher in the Rye\n",
-      "Things Fall Apart\n",
-      "To Kill a Mockingbird\n",
-      "The Great Gatsby\n",
-      "The Road\n",
-      "The Alchemist\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Finding and printing books that start with 'T'\n",
-    "print(\"Books that start with 'T':\")\n",
-    "for book in library.keys():  \n",
-    "    if book.startswith(\"T\"):  \n",
-    "        print(book)"
+    "}\n",
+    "\n",
+    "\n",
+    "print(\"\\nLibrary Catalog:\")\n",
+    "for book, status in library.items():\n",
+    "    print(f\"Book: {book:<30} Status: {status}\")"
    ]
   },
   {
@@ -104,14 +117,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "e8e66e9c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ask the user for a letter to search for.\n",
-    "# Use .upper() and .strip() so it works even if they enter lowercase or spaces.\n",
-    "# Example: If the user types \" t \", it should become \"T\"."
+    "letter = input(\"What letter does the book you are searching for begin with?\").strip().upper()"
    ]
   },
   {
@@ -124,12 +135,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "d43dc487",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a variable to keep track of how many books match the search."
+    "matching_books_count = 0  # Initialize counter to zero"
    ]
   },
   {
@@ -142,10 +153,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "2f25ac31",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Books starting with T that are Available:\n"
+     ]
+    }
+   ],
    "source": [
     "# Print a friendly message before listing the results. (Just run this cell, no need to make changes)\n",
     "print(f\"\\nBooks starting with {letter} that are Available:\")"
@@ -161,15 +181,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "d72e5d27",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------Available Books------\n",
+      "\n",
+      "The Hobbit is available.\n",
+      "Things Fall Apart is available.\n",
+      "The Great Gatsby is available.\n",
+      "The Road is available.\n",
+      "\n",
+      "-----Unavailable Books------\n",
+      "\n",
+      "The Catcher in the Rye is currently checked out.\n",
+      "To Kill a Mockingbird is currently checked out.\n",
+      "The Alchemist is currently checked out.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Loop through the book dictionary to check each title.\n",
     "# Example: for title, status in library.items():\n",
     "# If the title starts with the chosen letter and the status is \"Available\",\n",
-    "# print the title and increase match_count by 1."
+    "# print the title and increase match_count by 1.\n",
+    "print(\"------Available Books------\")\n",
+    "print()\n",
+    "for title, status in library.items():\n",
+    "    if title.startswith(letter) and status == \"Available\":\n",
+    "        print(f\"{title} is available.\")\n",
+    "        matching_books_count +=1\n",
+    "print()    \n",
+    "print(\"-----Unavailable Books------\")\n",
+    "print()\n",
+    "for title,status in library.items():\n",
+    "    if title[0].startswith(letter) and status == \"Checked Out\":\n",
+    "        print (f\"{title} is currently checked out.\")\n",
+    "print()   "
    ]
   },
   {
@@ -182,12 +235,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "6a4b6b15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Total available books starting with 'T': 4\n"
+     ]
+    }
+   ],
    "source": [
-    "# After the loop, print how many books matched."
+    "# After the loop, print how many books matched.\n",
+    "print (f\"\\nTotal available books starting with '{letter}': {matching_books_count}\") "
    ]
   },
   {
@@ -226,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
