--- a/smarter_book_filter.ipynb
+++ b/smarter_book_filter.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "id": "4c9d94ce",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
     "\n",
     "print(\"\\nLibrary Catalog:\")\n",
     "for book, status in library.items():\n",
-    "    print(f\"Book: {book:<30} Status: {status}\")"
+    "    print(f\"Book: {book:<30} Status: {status:>2}\")"
    ]
   },
   {
